--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "boilerplate for react projects",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config webpack.config.dev.js",
+    "start:dev": "webpack-dev-server --config webpack.config.dev.js --progress --colors"
   },
   "repository": {
     "type": "git",
@@ -18,5 +20,28 @@
   "bugs": {
     "url": "https://github.com/johnchuks/react-boilerplate/issues"
   },
-  "homepage": "https://github.com/johnchuks/react-boilerplate#readme"
+  "homepage": "https://github.com/johnchuks/react-boilerplate#readme",
+  "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "dotenv": "^6.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "jest": "^23.1.0",
+    "node-sass": "^4.9.0",
+    "prop-types": "^15.6.1",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
+    "react-router-dom": "^4.2.2",
+    "webpack": "^4.10.2",
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.1.2"
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
+    "webpack-cli": "^3.0.2"
+  }
 }
