--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.dev.js",
-    "start:dev": "webpack-dev-server --config webpack.config.dev.js --progress --colors"
+    "build:dev": "webpack --config webpack.config.dev.js",
+    "start:dev": "npm run build:dev && webpack-dev-server --config webpack.config.dev.js --progress --colors"
   },
   "repository": {
     "type": "git",
