--- a/package.json
+++ b/package.json
@@ -4,10 +4,20 @@
   "description": "boilerplate for react projects",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "build:dev": "webpack --config webpack.config.dev.js",
     "start:dev": "npm run build:dev && webpack-dev-server --config webpack.config.dev.js --progress --colors",
     "start": "webpack --config webpack.config.prod.js"
+  },
+  "jest": {
+    "setupFiles": [
+      "./tests/jestsetup.js"
+    ],
+    "snapshotSerializer": [
+      "enxyme-to-json/serializer"
+    ]
   },
   "repository": {
     "type": "git",
@@ -31,7 +41,6 @@
     "css-loader": "^0.28.11",
     "dotenv": "^6.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
-    "jest": "^23.1.0",
     "node-sass": "^4.9.0",
     "prop-types": "^15.6.1",
     "react": "^16.4.0",
@@ -43,7 +52,13 @@
     "webpack-merge": "^4.1.2"
   },
   "devDependencies": {
+    "babel-jest": "^23.0.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.4",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.1.0",
+    "react-test-renderer": "^16.4.0",
     "webpack-cli": "^3.0.2"
   }
 }
